src/Solidiscan/parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.8 from parser.y
-----------------------------------------------------------------------------

state 284 contains 1 shift/reduce conflicts.

rule 108 is unused
rule 110 is unused
rule 111 is unused
rule 112 is unused
rule 113 is unused
rule 114 is unused
rule 115 is unused
rule 152 is unused
rule 153 is unused
rule 170 is unused
rule 171 is unused
rule 172 is unused
rule 173 is unused
rule 180 is unused
rule 181 is unused
rule 206 is unused
rule 207 is unused

terminal "reservedid" is unused
terminal "exponent" is unused
terminal "int" is unused
terminal "!" is unused
terminal "!=" is unused
terminal "[" is unused
terminal "]" is unused
terminal ":" is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_solidiscan -> SourceUnit                    (0)
	SourceUnit ->                                      (1)
	SourceUnit -> SourceUnit SourceUnitSol             (2)
	SourceUnitSol -> PragmaDirective                   (3)
	SourceUnitSol -> ImportDirective                   (4)
	SourceUnitSol -> ContractDefinition                (5)
	PragmaDirective -> "pragma" PragmaName version ";"   (6)
	PragmaName -> ident                                (7)
	ImportDirective -> "import" stringLiteral ImportAs ";"   (8)
	ImportDirective -> "import" ImportAster ImportAs "from" stringLiteral ";"   (9)
	ImportAs -> "as" ident                             (10)
	ImportAster -> "*"                                 (11)
	ImportAster -> ident                               (12)
	ContractDefinition -> ConLibInt ident zero__InheritanceSpecList__ "{" list__ContractPart__ "}"   (13)
	ConLibInt -> contract                              (14)
	ConLibInt -> "library"                             (15)
	ConLibInt -> "interface"                           (16)
	InheritanceSpecList -> "is" InheritanceSpecifier list__OMInheritanceSpec__   (17)
	OMInheritanceSpec -> "," InheritanceSpecifier      (18)
	InheritanceSpecifier -> UserDefinedTypeName zero__InhExpList__   (19)
	InhExpList -> "(" Expression list__CSExpList__ ")"   (20)
	CSExpList -> "," Expression                        (21)
	ContractPart -> StateVarDec                        (22)
	ContractPart -> UsingForDec                        (23)
	ContractPart -> FunctionDefinition                 (24)
	ContractPart -> EventDefinition                    (25)
	ContractPart -> ModifierDefinition                 (26)
	ContractPart -> EnumDefinition                     (27)
	FunctionDefinition -> function ident ParameterList list__FuncMods__ zero__ReturnParam__ TermBlock   (28)
	EventDefinition -> "event" ident zero__EventParamList__ zero__AnonList__ ";"   (29)
	ModifierDefinition -> "modifier" ident zero__ParameterList__ TermBlock   (30)
	ModifierInvocation -> ident "(" list__ModExpList__ ")"   (31)
	ModExpList -> ExpressionList                       (32)
	EnumDefinition -> "enum" ident "{" EnumValList "}"   (33)
	EnumValue -> ident                                 (34)
	EnumValList -> EnumValue list__MultiEnumValue__    (35)
	MultiEnumValue -> "," EnumValue                    (36)
	EventParamList -> "(" zero__EventParams__ ")"      (37)
	EventParams -> EParameters list__EParamList__      (38)
	EParamList -> "," EParameters                      (39)
	EParameters -> TypeName ident                      (40)
	AnonList -> "anonymous"                            (41)
	ParameterList -> "(" zero__Parameters__ ")"        (42)
	Parameters -> Parameter list__ParamList__          (43)
	ParamList -> "," Parameter                         (44)
	Parameter -> TypeName zero__StorageLocation__ ident   (45)
	FuncMods -> ModifierInvocation                     (46)
	FuncMods -> StateMutability                        (47)
	FuncMods -> FuncVar                                (48)
	ReturnParam -> "returns" ParameterList             (49)
	TermBlock -> ";"                                   (50)
	TermBlock -> "{" list__Statement__ "}"             (51)
	StateMutability -> "pure"                          (52)
	StateMutability -> "constant"                      (53)
	StateMutability -> "view"                          (54)
	StateMutability -> "payable"                       (55)
	StorageLocation -> "memory"                        (56)
	StorageLocation -> "storage"                       (57)
	FuncVar -> "external"                              (58)
	FuncVar -> "internal"                              (59)
	FuncVar -> "private"                               (60)
	FuncVar -> "public"                                (61)
	StateVarDec -> TypeName zero__AssVar__ ident zero__MExpression__ ";"   (62)
	UsingForDec -> "using" ident "for" TypeName ";"    (63)
	TypeName -> ElementaryTypeName                     (64)
	AssVar -> "public"                                 (65)
	AssVar -> "private"                                (66)
	AssVar -> "internal"                               (67)
	AssVar -> "constant"                               (68)
	MExpression -> "=" Expression                      (69)
	ExpressionList -> Expression list__ExprList__      (70)
	ExprList -> "," Expression                         (71)
	Expression -> Expression "++"                      (72)
	Expression -> Expression "--"                      (73)
	Expression -> NewExpression                        (74)
	Expression -> MemberAccess                         (75)
	Expression -> "(" Expression ")"                   (76)
	Expression -> Expression "**" Expression           (77)
	Expression -> Expression "*" Expression            (78)
	Expression -> Expression "/" Expression            (79)
	Expression -> Expression "%" Expression            (80)
	Expression -> Expression "+" Expression            (81)
	Expression -> Expression "-" Expression            (82)
	Expression -> Expression "<<" Expression           (83)
	Expression -> Expression ">>" Expression           (84)
	Expression -> Expression "&" Expression            (85)
	Expression -> Expression "^" Expression            (86)
	Expression -> Expression "|" Expression            (87)
	Expression -> Expression "<" Expression            (88)
	Expression -> Expression ">" Expression            (89)
	Expression -> Expression "<=" Expression           (90)
	Expression -> Expression ">=" Expression           (91)
	Expression -> Expression "==" Expression           (92)
	Expression -> Expression "&&" Expression           (93)
	Expression -> Expression "||" Expression           (94)
	Expression -> Expression "=" Expression            (95)
	Expression -> Expression "|=" Expression           (96)
	Expression -> Expression "^=" Expression           (97)
	Expression -> Expression "&=" Expression           (98)
	Expression -> Expression "<<=" Expression          (99)
	Expression -> Expression ">>=" Expression          (100)
	Expression -> Expression "+=" Expression           (101)
	Expression -> Expression "-=" Expression           (102)
	Expression -> Expression "*=" Expression           (103)
	Expression -> Expression "/=" Expression           (104)
	Expression -> Expression "%=" Expression           (105)
	Expression -> PrimaryExpression                    (106)
	NewExpression -> "new" TypeName                    (107)
	IndexAccess -> Expression "[" zero__Expression__ "]"   (108)
	MemberAccess -> Expression "." ident               (109)
	FunctionCall -> Expression "(" FunctionCallArgs ")"   (110)
	FunctionCallArgs -> "{" zero__NameValueList__ "}"   (111)
	FunctionCallArgs -> zero__ExpressionList__         (112)
	NameValueList -> NameVal list__NameValueList_Lst__   (113)
	NameValueList_Lst -> "," NameVal                   (114)
	NameVal -> ident ":" Expression                    (115)
	Statement -> IfStatement                           (116)
	Statement -> SimpleStatement ";"                   (117)
	SimpleStatement -> VariableDefinition              (118)
	SimpleStatement -> ExpressionStatement             (119)
	VariableDefinition -> "var" VariableDeclaration    (120)
	VariableDeclaration -> TypeName zero__StorageLocation__ ident   (121)
	ExpressionStatement -> Expression                  (122)
	IfStatement -> "if" "(" Expression ")" Statement zero__ElseState__   (123)
	ElseState -> "else" Statement                      (124)
	PrimaryExpression -> BooleanLiteral                (125)
	PrimaryExpression -> NumberLiteral                 (126)
	PrimaryExpression -> stringLiteral                 (127)
	PrimaryExpression -> ident                         (128)
	BooleanLiteral -> "true"                           (129)
	BooleanLiteral -> "false"                          (130)
	NumberLiteral -> "decimalnum" zero__numberunit__   (131)
	UserDefinedTypeName -> ident                       (132)
	ElementaryTypeName -> "address"                    (133)
	ElementaryTypeName -> "bool"                       (134)
	ElementaryTypeName -> "var"                        (135)
	ElementaryTypeName -> "string"                     (136)
	ElementaryTypeName -> "uint"                       (137)
	list__CSExpList__ -> list1__CSExpList__            (138)
	list__CSExpList__ ->                               (139)
	list__ContractPart__ -> list1__ContractPart__      (140)
	list__ContractPart__ ->                            (141)
	list__EParamList__ -> list1__EParamList__          (142)
	list__EParamList__ ->                              (143)
	list__ExprList__ -> list1__ExprList__              (144)
	list__ExprList__ ->                                (145)
	list__FuncMods__ -> list1__FuncMods__              (146)
	list__FuncMods__ ->                                (147)
	list__ModExpList__ -> list1__ModExpList__          (148)
	list__ModExpList__ ->                              (149)
	list__MultiEnumValue__ -> list1__MultiEnumValue__   (150)
	list__MultiEnumValue__ ->                          (151)
	list__NameValueList_Lst__ -> list1__NameValueList_Lst__   (152)
	list__NameValueList_Lst__ ->                       (153)
	list__OMInheritanceSpec__ -> list1__OMInheritanceSpec__   (154)
	list__OMInheritanceSpec__ ->                       (155)
	list__ParamList__ -> list1__ParamList__            (156)
	list__ParamList__ ->                               (157)
	list__Statement__ -> list1__Statement__            (158)
	list__Statement__ ->                               (159)
	zero__AnonList__ -> AnonList                       (160)
	zero__AnonList__ ->                                (161)
	zero__AssVar__ -> AssVar                           (162)
	zero__AssVar__ ->                                  (163)
	zero__ElseState__ -> ElseState                     (164)
	zero__ElseState__ ->                               (165)
	zero__EventParamList__ -> EventParamList           (166)
	zero__EventParamList__ ->                          (167)
	zero__EventParams__ -> EventParams                 (168)
	zero__EventParams__ ->                             (169)
	zero__Expression__ -> Expression                   (170)
	zero__Expression__ ->                              (171)
	zero__ExpressionList__ -> ExpressionList           (172)
	zero__ExpressionList__ ->                          (173)
	zero__InhExpList__ -> InhExpList                   (174)
	zero__InhExpList__ ->                              (175)
	zero__InheritanceSpecList__ -> InheritanceSpecList   (176)
	zero__InheritanceSpecList__ ->                     (177)
	zero__MExpression__ -> MExpression                 (178)
	zero__MExpression__ ->                             (179)
	zero__NameValueList__ -> NameValueList             (180)
	zero__NameValueList__ ->                           (181)
	zero__ParameterList__ -> ParameterList             (182)
	zero__ParameterList__ ->                           (183)
	zero__Parameters__ -> Parameters                   (184)
	zero__Parameters__ ->                              (185)
	zero__ReturnParam__ -> ReturnParam                 (186)
	zero__ReturnParam__ ->                             (187)
	zero__StorageLocation__ -> StorageLocation         (188)
	zero__StorageLocation__ ->                         (189)
	zero__numberunit__ -> numberunit                   (190)
	zero__numberunit__ ->                              (191)
	list1__CSExpList__ -> CSExpList                    (192)
	list1__CSExpList__ -> CSExpList list1__CSExpList__   (193)
	list1__ContractPart__ -> ContractPart              (194)
	list1__ContractPart__ -> ContractPart list1__ContractPart__   (195)
	list1__EParamList__ -> EParamList                  (196)
	list1__EParamList__ -> EParamList list1__EParamList__   (197)
	list1__ExprList__ -> ExprList                      (198)
	list1__ExprList__ -> ExprList list1__ExprList__    (199)
	list1__FuncMods__ -> FuncMods                      (200)
	list1__FuncMods__ -> FuncMods list1__FuncMods__    (201)
	list1__ModExpList__ -> ModExpList                  (202)
	list1__ModExpList__ -> ModExpList list1__ModExpList__   (203)
	list1__MultiEnumValue__ -> MultiEnumValue          (204)
	list1__MultiEnumValue__ -> MultiEnumValue list1__MultiEnumValue__   (205)
	list1__NameValueList_Lst__ -> NameValueList_Lst    (206)
	list1__NameValueList_Lst__ -> NameValueList_Lst list1__NameValueList_Lst__   (207)
	list1__OMInheritanceSpec__ -> OMInheritanceSpec    (208)
	list1__OMInheritanceSpec__ -> OMInheritanceSpec list1__OMInheritanceSpec__   (209)
	list1__ParamList__ -> ParamList                    (210)
	list1__ParamList__ -> ParamList list1__ParamList__   (211)
	list1__Statement__ -> Statement                    (212)
	list1__Statement__ -> Statement list1__Statement__   (213)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	"reservedid"   { TReservedOp _ }
	version        { TVers _ }
	"decimalnum"   { TDec _ $$ }
	"exponent"     { TExp _ $$ }
	"int"          { TInt _ $$ }
	"uint"         { TUInt _ $$ }
	numberunit     { TNumUnit _ $$ }
	"pragma"       { TPragma _ }
	"import"       { TImport _ }
	"external"     { TExternal _ $$ }
	"public"       { TPublic _ $$ }
	"internal"     { TIntern _ $$ }
	"private"      { TPriv _ $$ }
	"constant"     { TConst _ $$ }
	"string"       { TStringAs _ $$ }
	contract       { TContract _ }
	"library"      { TLibrary _ }
	"interface"    { TInterface _ }
	function       { TFuncDef _ }
	"address"      { TAddr _ $$ }
	"bool"         { TBooleanLit _ $$ }
	"var"          { TVar _ $$ }
	"using"        { TUsing _ $$ }
	"for"          { TFor _ $$ }
	"true"         { TTrue _ $$ }
	"false"        { TFalse _ $$ }
	"as"           { TAs _ }
	"is"           { TIs _ }
	"from"         { TFrom _ $$ }
	"view"         { TView _ $$ }
	"pure"         { TPure _ $$ }
	"payable"      { TPayable _ $$ }
	"returns"      { TReturns _ }
	"if"           { TIf _ }
	"else"         { TElse _ }
	"event"        { TEvent _ }
	"anonymous"    { TAnon _ }
	"modifier"     { TModi _ }
	"memory"       { TMem _  $$ }
	"storage"      { TStorage _ $$ }
	"enum"         { TEnum _ }
	"new"          { TNew _ }
	"++"           { TIncr _ }
	"--"           { TDecr _ }
	"^"            { THat _ }
	"!"            { TNegate _ }
	"&&"           { TAnd _ }
	"&"            { TBitAnd _ }
	"||"           { TOr _ }
	"|"            { TBOr _ }
	"!="           { TInEqual _ }
	"<"            { TLThan _ }
	">"            { TGThan _ }
	">>"           { TRShift _ }
	"<<"           { TLShift _ }
	"<="           { TLTEq _ }
	">="           { TGTEq _ }
	"=="           { TEquality _ }
	"{"            { TLCurl _ }
	"}"            { TRCurl _ }
	"["            { TLBrack _ }
	"]"            { TRBrack _ }
	"."            { TPeriod _ $$ }
	"="            { TEquals _ }
	"*"            { TMult _ $$ }
	"/"            { TDiv _ }
	"**"           { TExpSym _ }
	"%"            { TModul _ }
	"+"            { TOp _ $$ }
	"-"            { TSub _ }
	";"            { TSemiCol _ }
	":"            { TCol _ }
	","            { TComma _ }
	"|="           { TLVOr _ }
	"^="           { TLVXor _ }
	"&="           { TLVAnd _ }
	"<<="          { TLVLeftShift _ }
	">>="          { TLVRightShift _ }
	"+="           { TLVIncr _ }
	"-="           { TLVDecr _ }
	"*="           { TLVMult _ }
	"/="           { TLVDiv _ }
	"%="           { TLVMod _ }
	ident          { TIdent _ $$ }
	stringLiteral  { TStringLiteral _ $$ }
	"("            { TLeftParen _ }
	")"            { TRightParen _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_solidiscan rule  0
	SourceUnit      rules 1, 2
	SourceUnitSol   rules 3, 4, 5
	PragmaDirective rule  6
	PragmaName      rule  7
	ImportDirective rules 8, 9
	ImportAs        rule  10
	ImportAster     rules 11, 12
	ContractDefinition rule  13
	ConLibInt       rules 14, 15, 16
	InheritanceSpecList rule  17
	OMInheritanceSpec rule  18
	InheritanceSpecifier rule  19
	InhExpList      rule  20
	CSExpList       rule  21
	ContractPart    rules 22, 23, 24, 25, 26, 27
	FunctionDefinition rule  28
	EventDefinition rule  29
	ModifierDefinition rule  30
	ModifierInvocation rule  31
	ModExpList      rule  32
	EnumDefinition  rule  33
	EnumValue       rule  34
	EnumValList     rule  35
	MultiEnumValue  rule  36
	EventParamList  rule  37
	EventParams     rule  38
	EParamList      rule  39
	EParameters     rule  40
	AnonList        rule  41
	ParameterList   rule  42
	Parameters      rule  43
	ParamList       rule  44
	Parameter       rule  45
	FuncMods        rules 46, 47, 48
	ReturnParam     rule  49
	TermBlock       rules 50, 51
	StateMutability rules 52, 53, 54, 55
	StorageLocation rules 56, 57
	FuncVar         rules 58, 59, 60, 61
	StateVarDec     rule  62
	UsingForDec     rule  63
	TypeName        rule  64
	AssVar          rules 65, 66, 67, 68
	MExpression     rule  69
	ExpressionList  rule  70
	ExprList        rule  71
	Expression      rules 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106
	NewExpression   rule  107
	IndexAccess     rule  108
	MemberAccess    rule  109
	FunctionCall    rule  110
	FunctionCallArgs rules 111, 112
	NameValueList   rule  113
	NameValueList_Lst rule  114
	NameVal         rule  115
	Statement       rules 116, 117
	SimpleStatement rules 118, 119
	VariableDefinition rule  120
	VariableDeclaration rule  121
	ExpressionStatement rule  122
	IfStatement     rule  123
	ElseState       rule  124
	PrimaryExpression rules 125, 126, 127, 128
	BooleanLiteral  rules 129, 130
	NumberLiteral   rule  131
	UserDefinedTypeName rule  132
	ElementaryTypeName rules 133, 134, 135, 136, 137
	list__CSExpList__ rules 138, 139
	list__ContractPart__ rules 140, 141
	list__EParamList__ rules 142, 143
	list__ExprList__ rules 144, 145
	list__FuncMods__ rules 146, 147
	list__ModExpList__ rules 148, 149
	list__MultiEnumValue__ rules 150, 151
	list__NameValueList_Lst__ rules 152, 153
	list__OMInheritanceSpec__ rules 154, 155
	list__ParamList__ rules 156, 157
	list__Statement__ rules 158, 159
	zero__AnonList__ rules 160, 161
	zero__AssVar__  rules 162, 163
	zero__ElseState__ rules 164, 165
	zero__EventParamList__ rules 166, 167
	zero__EventParams__ rules 168, 169
	zero__Expression__ rules 170, 171
	zero__ExpressionList__ rules 172, 173
	zero__InhExpList__ rules 174, 175
	zero__InheritanceSpecList__ rules 176, 177
	zero__MExpression__ rules 178, 179
	zero__NameValueList__ rules 180, 181
	zero__ParameterList__ rules 182, 183
	zero__Parameters__ rules 184, 185
	zero__ReturnParam__ rules 186, 187
	zero__StorageLocation__ rules 188, 189
	zero__numberunit__ rules 190, 191
	list1__CSExpList__ rules 192, 193
	list1__ContractPart__ rules 194, 195
	list1__EParamList__ rules 196, 197
	list1__ExprList__ rules 198, 199
	list1__FuncMods__ rules 200, 201
	list1__ModExpList__ rules 202, 203
	list1__MultiEnumValue__ rules 204, 205
	list1__NameValueList_Lst__ rules 206, 207
	list1__OMInheritanceSpec__ rules 208, 209
	list1__ParamList__ rules 210, 211
	list1__Statement__ rules 212, 213

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	"pragma"       reduce using rule 1
	"import"       reduce using rule 1
	contract       reduce using rule 1
	"library"      reduce using rule 1
	"interface"    reduce using rule 1
	%eof           reduce using rule 1

	SourceUnit     goto state 2

State 1




State 2

	%start_solidiscan -> SourceUnit .                   (rule 0)
	SourceUnit -> SourceUnit . SourceUnitSol            (rule 2)

	"pragma"       shift, and enter state 8
	"import"       shift, and enter state 9
	contract       shift, and enter state 10
	"library"      shift, and enter state 11
	"interface"    shift, and enter state 12
	%eof           accept

	SourceUnitSol  goto state 3
	PragmaDirectivegoto state 4
	ImportDirectivegoto state 5
	ContractDefinitiongoto state 6
	ConLibInt      goto state 7

State 3

	SourceUnit -> SourceUnit SourceUnitSol .            (rule 2)

	"pragma"       reduce using rule 2
	"import"       reduce using rule 2
	contract       reduce using rule 2
	"library"      reduce using rule 2
	"interface"    reduce using rule 2
	%eof           reduce using rule 2


State 4

	SourceUnitSol -> PragmaDirective .                  (rule 3)

	"pragma"       reduce using rule 3
	"import"       reduce using rule 3
	contract       reduce using rule 3
	"library"      reduce using rule 3
	"interface"    reduce using rule 3
	%eof           reduce using rule 3


State 5

	SourceUnitSol -> ImportDirective .                  (rule 4)

	"pragma"       reduce using rule 4
	"import"       reduce using rule 4
	contract       reduce using rule 4
	"library"      reduce using rule 4
	"interface"    reduce using rule 4
	%eof           reduce using rule 4


State 6

	SourceUnitSol -> ContractDefinition .               (rule 5)

	"pragma"       reduce using rule 5
	"import"       reduce using rule 5
	contract       reduce using rule 5
	"library"      reduce using rule 5
	"interface"    reduce using rule 5
	%eof           reduce using rule 5


State 7

	ContractDefinition -> ConLibInt . ident zero__InheritanceSpecList__ "{" list__ContractPart__ "}"    (rule 13)

	ident          shift, and enter state 19


State 8

	PragmaDirective -> "pragma" . PragmaName version ";"    (rule 6)

	ident          shift, and enter state 18

	PragmaName     goto state 17

State 9

	ImportDirective -> "import" . stringLiteral ImportAs ";"    (rule 8)
	ImportDirective -> "import" . ImportAster ImportAs "from" stringLiteral ";"    (rule 9)

	"*"            shift, and enter state 14
	ident          shift, and enter state 15
	stringLiteral  shift, and enter state 16

	ImportAster    goto state 13

State 10

	ConLibInt -> contract .                             (rule 14)

	ident          reduce using rule 14


State 11

	ConLibInt -> "library" .                            (rule 15)

	ident          reduce using rule 15


State 12

	ConLibInt -> "interface" .                          (rule 16)

	ident          reduce using rule 16


State 13

	ImportDirective -> "import" ImportAster . ImportAs "from" stringLiteral ";"    (rule 9)

	"as"           shift, and enter state 25

	ImportAs       goto state 26

State 14

	ImportAster -> "*" .                                (rule 11)

	"as"           reduce using rule 11


State 15

	ImportAster -> ident .                              (rule 12)

	"as"           reduce using rule 12


State 16

	ImportDirective -> "import" stringLiteral . ImportAs ";"    (rule 8)

	"as"           shift, and enter state 25

	ImportAs       goto state 24

State 17

	PragmaDirective -> "pragma" PragmaName . version ";"    (rule 6)

	version        shift, and enter state 23


State 18

	PragmaName -> ident .                               (rule 7)

	version        reduce using rule 7


State 19

	ContractDefinition -> ConLibInt ident . zero__InheritanceSpecList__ "{" list__ContractPart__ "}"    (rule 13)

	"is"           shift, and enter state 22
	"{"            reduce using rule 177

	InheritanceSpecListgoto state 20
	zero__InheritanceSpecList__goto state 21

State 20

	zero__InheritanceSpecList__ -> InheritanceSpecList .    (rule 176)

	"{"            reduce using rule 176


State 21

	ContractDefinition -> ConLibInt ident zero__InheritanceSpecList__ . "{" list__ContractPart__ "}"    (rule 13)

	"{"            shift, and enter state 34


State 22

	InheritanceSpecList -> "is" . InheritanceSpecifier list__OMInheritanceSpec__    (rule 17)

	ident          shift, and enter state 33

	InheritanceSpecifiergoto state 31
	UserDefinedTypeNamegoto state 32

State 23

	PragmaDirective -> "pragma" PragmaName version . ";"    (rule 6)

	";"            shift, and enter state 30


State 24

	ImportDirective -> "import" stringLiteral ImportAs . ";"    (rule 8)

	";"            shift, and enter state 29


State 25

	ImportAs -> "as" . ident                            (rule 10)

	ident          shift, and enter state 28


State 26

	ImportDirective -> "import" ImportAster ImportAs . "from" stringLiteral ";"    (rule 9)

	"from"         shift, and enter state 27


State 27

	ImportDirective -> "import" ImportAster ImportAs "from" . stringLiteral ";"    (rule 9)

	stringLiteral  shift, and enter state 63


State 28

	ImportAs -> "as" ident .                            (rule 10)

	"from"         reduce using rule 10
	";"            reduce using rule 10


State 29

	ImportDirective -> "import" stringLiteral ImportAs ";" .    (rule 8)

	"pragma"       reduce using rule 8
	"import"       reduce using rule 8
	contract       reduce using rule 8
	"library"      reduce using rule 8
	"interface"    reduce using rule 8
	%eof           reduce using rule 8


State 30

	PragmaDirective -> "pragma" PragmaName version ";" .    (rule 6)

	"pragma"       reduce using rule 6
	"import"       reduce using rule 6
	contract       reduce using rule 6
	"library"      reduce using rule 6
	"interface"    reduce using rule 6
	%eof           reduce using rule 6


State 31

	InheritanceSpecList -> "is" InheritanceSpecifier . list__OMInheritanceSpec__    (rule 17)

	"{"            reduce using rule 155
	","            shift, and enter state 62

	OMInheritanceSpecgoto state 59
	list__OMInheritanceSpec__goto state 60
	list1__OMInheritanceSpec__goto state 61

State 32

	InheritanceSpecifier -> UserDefinedTypeName . zero__InhExpList__    (rule 19)

	"{"            reduce using rule 175
	","            reduce using rule 175
	"("            shift, and enter state 58

	InhExpList     goto state 56
	zero__InhExpList__goto state 57

State 33

	UserDefinedTypeName -> ident .                      (rule 132)

	"{"            reduce using rule 132
	","            reduce using rule 132
	"("            reduce using rule 132


State 34

	ContractDefinition -> ConLibInt ident zero__InheritanceSpecList__ "{" . list__ContractPart__ "}"    (rule 13)

	"uint"         shift, and enter state 46
	"string"       shift, and enter state 47
	function       shift, and enter state 48
	"address"      shift, and enter state 49
	"bool"         shift, and enter state 50
	"var"          shift, and enter state 51
	"using"        shift, and enter state 52
	"event"        shift, and enter state 53
	"modifier"     shift, and enter state 54
	"enum"         shift, and enter state 55
	"}"            reduce using rule 141

	ContractPart   goto state 35
	FunctionDefinitiongoto state 36
	EventDefinitiongoto state 37
	ModifierDefinitiongoto state 38
	EnumDefinition goto state 39
	StateVarDec    goto state 40
	UsingForDec    goto state 41
	TypeName       goto state 42
	ElementaryTypeNamegoto state 43
	list__ContractPart__goto state 44
	list1__ContractPart__goto state 45

State 35

	list1__ContractPart__ -> ContractPart .             (rule 194)
	list1__ContractPart__ -> ContractPart . list1__ContractPart__    (rule 195)

	"uint"         shift, and enter state 46
	"string"       shift, and enter state 47
	function       shift, and enter state 48
	"address"      shift, and enter state 49
	"bool"         shift, and enter state 50
	"var"          shift, and enter state 51
	"using"        shift, and enter state 52
	"event"        shift, and enter state 53
	"modifier"     shift, and enter state 54
	"enum"         shift, and enter state 55
	"}"            reduce using rule 194

	ContractPart   goto state 35
	FunctionDefinitiongoto state 36
	EventDefinitiongoto state 37
	ModifierDefinitiongoto state 38
	EnumDefinition goto state 39
	StateVarDec    goto state 40
	UsingForDec    goto state 41
	TypeName       goto state 42
	ElementaryTypeNamegoto state 43
	list1__ContractPart__goto state 92

State 36

	ContractPart -> FunctionDefinition .                (rule 24)

	"uint"         reduce using rule 24
	"string"       reduce using rule 24
	function       reduce using rule 24
	"address"      reduce using rule 24
	"bool"         reduce using rule 24
	"var"          reduce using rule 24
	"using"        reduce using rule 24
	"event"        reduce using rule 24
	"modifier"     reduce using rule 24
	"enum"         reduce using rule 24
	"}"            reduce using rule 24


State 37

	ContractPart -> EventDefinition .                   (rule 25)

	"uint"         reduce using rule 25
	"string"       reduce using rule 25
	function       reduce using rule 25
	"address"      reduce using rule 25
	"bool"         reduce using rule 25
	"var"          reduce using rule 25
	"using"        reduce using rule 25
	"event"        reduce using rule 25
	"modifier"     reduce using rule 25
	"enum"         reduce using rule 25
	"}"            reduce using rule 25


State 38

	ContractPart -> ModifierDefinition .                (rule 26)

	"uint"         reduce using rule 26
	"string"       reduce using rule 26
	function       reduce using rule 26
	"address"      reduce using rule 26
	"bool"         reduce using rule 26
	"var"          reduce using rule 26
	"using"        reduce using rule 26
	"event"        reduce using rule 26
	"modifier"     reduce using rule 26
	"enum"         reduce using rule 26
	"}"            reduce using rule 26


State 39

	ContractPart -> EnumDefinition .                    (rule 27)

	"uint"         reduce using rule 27
	"string"       reduce using rule 27
	function       reduce using rule 27
	"address"      reduce using rule 27
	"bool"         reduce using rule 27
	"var"          reduce using rule 27
	"using"        reduce using rule 27
	"event"        reduce using rule 27
	"modifier"     reduce using rule 27
	"enum"         reduce using rule 27
	"}"            reduce using rule 27


State 40

	ContractPart -> StateVarDec .                       (rule 22)

	"uint"         reduce using rule 22
	"string"       reduce using rule 22
	function       reduce using rule 22
	"address"      reduce using rule 22
	"bool"         reduce using rule 22
	"var"          reduce using rule 22
	"using"        reduce using rule 22
	"event"        reduce using rule 22
	"modifier"     reduce using rule 22
	"enum"         reduce using rule 22
	"}"            reduce using rule 22


State 41

	ContractPart -> UsingForDec .                       (rule 23)

	"uint"         reduce using rule 23
	"string"       reduce using rule 23
	function       reduce using rule 23
	"address"      reduce using rule 23
	"bool"         reduce using rule 23
	"var"          reduce using rule 23
	"using"        reduce using rule 23
	"event"        reduce using rule 23
	"modifier"     reduce using rule 23
	"enum"         reduce using rule 23
	"}"            reduce using rule 23


State 42

	StateVarDec -> TypeName . zero__AssVar__ ident zero__MExpression__ ";"    (rule 62)

	"public"       shift, and enter state 88
	"internal"     shift, and enter state 89
	"private"      shift, and enter state 90
	"constant"     shift, and enter state 91
	ident          reduce using rule 163

	AssVar         goto state 86
	zero__AssVar__ goto state 87

State 43

	TypeName -> ElementaryTypeName .                    (rule 64)

	"decimalnum"   reduce using rule 64
	"public"       reduce using rule 64
	"internal"     reduce using rule 64
	"private"      reduce using rule 64
	"constant"     reduce using rule 64
	"true"         reduce using rule 64
	"false"        reduce using rule 64
	"memory"       reduce using rule 64
	"storage"      reduce using rule 64
	"new"          reduce using rule 64
	"++"           reduce using rule 64
	"--"           reduce using rule 64
	"^"            reduce using rule 64
	"&&"           reduce using rule 64
	"&"            reduce using rule 64
	"||"           reduce using rule 64
	"|"            reduce using rule 64
	"<"            reduce using rule 64
	">"            reduce using rule 64
	">>"           reduce using rule 64
	"<<"           reduce using rule 64
	"<="           reduce using rule 64
	">="           reduce using rule 64
	"=="           reduce using rule 64
	"."            reduce using rule 64
	"="            reduce using rule 64
	"*"            reduce using rule 64
	"/"            reduce using rule 64
	"**"           reduce using rule 64
	"%"            reduce using rule 64
	"+"            reduce using rule 64
	"-"            reduce using rule 64
	";"            reduce using rule 64
	","            reduce using rule 64
	"|="           reduce using rule 64
	"^="           reduce using rule 64
	"&="           reduce using rule 64
	"<<="          reduce using rule 64
	">>="          reduce using rule 64
	"+="           reduce using rule 64
	"-="           reduce using rule 64
	"*="           reduce using rule 64
	"/="           reduce using rule 64
	"%="           reduce using rule 64
	ident          reduce using rule 64
	stringLiteral  reduce using rule 64
	"("            reduce using rule 64
	")"            reduce using rule 64


State 44

	ContractDefinition -> ConLibInt ident zero__InheritanceSpecList__ "{" list__ContractPart__ . "}"    (rule 13)

	"}"            shift, and enter state 85


State 45

	list__ContractPart__ -> list1__ContractPart__ .     (rule 140)

	"}"            reduce using rule 140


State 46

	ElementaryTypeName -> "uint" .                      (rule 137)
